--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=8082
 spring.hateoas.use-hal-as-default-json-media-type= false
+spring.data.mongodb.auto-index-creation=true
