add api token access on endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=8082
 spring.hateoas.use-hal-as-default-json-media-type= false
 spring.data.mongodb.auto-index-creation=true
+auth.token=${API_TOKEN}
+auth.token.name=${API_TOKEN_NAME}
