--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,6 +12,6 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=8082
 spring.hateoas.use-hal-as-default-json-media-type= false
 spring.data.mongodb.auto-index-creation=true
-auth.token=${API_TOKEN}
-auth.token.name=${API_TOKEN_NAME}
+auth.token=${API_TOKEN:"test}
+auth.token.name=${API_TOKEN_NAME:"test"}
 spring.data.rest.base-path=/api/private
