--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=database
-spring.data.mongodb.uri=${MONGODB_URI:mongodb://rootuser:rootpass@localhost:27017}
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://rootuser:rootpass@mongodb:27017}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
@@ -12,6 +12,6 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=8082
 spring.hateoas.use-hal-as-default-json-media-type= false
 spring.data.mongodb.auto-index-creation=true
-auth.token=${API_TOKEN}
-auth.token.name=${API_TOKEN_NAME}
+auth.token=${API_TOKEN:secret}
+auth.token.name=${API_TOKEN_NAME:Authorization}
 spring.data.rest.base-path=/api/private
