add api for orders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.data.mongodb.auto-index-creation=true
 auth.token=${API_TOKEN:secret}
 auth.token.name=${API_TOKEN_NAME:Authorization}
 spring.data.rest.base-path=/api/private
+spring.thymeleaf.templateResolverOrder=1
