add telegram notification about placed order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,9 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 server.port=8082
 spring.hateoas.use-hal-as-default-json-media-type= false
 spring.data.mongodb.auto-index-creation=true
-auth.token=${API_TOKEN:secret}
-auth.token.name=${API_TOKEN_NAME:Authorization}
+auth.token=${API_TOKEN}
+auth.token.name=${API_TOKEN_NAME}
 spring.data.rest.base-path=/api/private
 spring.thymeleaf.templateResolverOrder=1
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.bot.chat.id=${TELEGRAM_BOT_CHAT_ID:1563542221}
