add telegram notification about placed order

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ auth.token.name=${API_TOKEN_NAME}
 spring.data.rest.base-path=/api/private
 spring.thymeleaf.templateResolverOrder=1
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
-telegram.bot.chat.id=${TELEGRAM_BOT_CHAT_ID:1563542221}
+telegram.bot.chat.id=${TELEGRAM_BOT_CHAT_ID}
