--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.data.rest.base-path=/api/private
 spring.thymeleaf.templateResolverOrder=1
 telegram.bot.token=${TELEGRAM_BOT_TOKEN}
 telegram.bot.chat.id=${TELEGRAM_BOT_CHAT_ID}
+#if you want to use init data, set this to true. It will erase all data in the database and insert the data in the directory /initData
+init.data.enabled=false
