--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,8 +3,8 @@ spring.data.mongodb.database=database
 spring.data.mongodb.uri=${MONGODB_URI:mongodb://rootuser:rootpass@localhost:27017}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=${MAIL_USERNAME:"test@test.com"}
+spring.mail.password=${MAIL_PASSWORD:"test"}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -15,3 +15,8 @@ spring.data.mongodb.auto-index-creation=true
 auth.token=${API_TOKEN:"test}
 auth.token.name=${API_TOKEN_NAME:"test"}
 spring.data.rest.base-path=/api/private
+spring.thymeleaf.templateResolverOrder=1
+telegram.bot.token=${TELEGRAM_BOT_TOKEN:"test"}
+telegram.bot.chat.id=${TELEGRAM_BOT_CHAT_ID:"test"}
+#if you want to use init data, set this to true. It will erase all data in the database and insert the data in the directory /initData
+init.data.enabled=false
